Now Vagrantfile is able to sync folders using rsync or nfs based on what is defined on vagrant_hosts.yaml file.

--- a/ansible_inventory.yml
+++ b/ansible_inventory.yml
@@ -1,7 +1,5 @@
 ---
 all:
   hosts:
-    node1:
+    node_01:
       ansible_ssh_host: 100.100.100.100
-    node2:
-      ansible_ssh_host: 100.100.100.101
