--- a/vagrant_hosts.yml
+++ b/vagrant_hosts.yml
@@ -1,17 +1,22 @@
 ---
 provider: "virtualbox"
+ansible_config_file: "provisioning/ansible.cfg"
 hosts:
-  - name: node1
+  - name: node_01
     ip: 100.100.100.100
-    box: centos/7
-    ansible_playbook: provisioning/playbook.yml
-    ansible_inventory: ansible_inventory.yml
-    memory: 4096
-    cpus: 2
-  - name: node2
-    ip: 100.100.100.101
     box: centos/7
     ansible_playbook: provisioning/playbook.yml
     ansible_inventory: ansible_inventory.yml
     memory: 2048
     cpus: 1
+    synced_folders:
+    - src: .
+      dest: /vagrant
+      type: rsync
+      disabled: true
+    # - src: /nfs_local
+    #   dest: /nfs_vagrant
+    #   type: nfs
+    #   nfs_version: 4
+    #   nfs_udp: false
+    #   disabled: false
